// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MovieDetail should match the snapshot 1`] = `
<RCTScrollView
  collapsable={false}
  handlerTag={1}
  handlerType="NativeViewGestureHandler"
  onGestureHandlerEvent={[Function]}
  onGestureHandlerStateChange={[Function]}
  waitFor={
    Array [
      Object {
        "current": null,
      },
    ]
  }
>
  <View>
    <Modal
      animationType="none"
      hardwareAccelerated={false}
      onRequestClose={[Function]}
      statusBarTranslucent={true}
      supportedOrientations={
        Array [
          "landscape",
          "portrait",
        ]
      }
      transparent={true}
      visible={true}
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "bottom": 0,
              "flex": 1,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            Object {
              "backgroundColor": "rgba(0, 0, 0, 0.25)",
            },
          ]
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "bottom": 0,
              "justifyContent": "center",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <ActivityIndicator
            color="white"
            size="large"
            style={
              Array [
                Object {
                  "flex": 1,
                },
                Object {},
              ]
            }
          />
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "bottom": 0,
                  "flex": 1,
                  "justifyContent": "center",
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                Object {},
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "fontSize": 20,
                    "fontWeight": "bold",
                    "height": 50,
                    "top": 80,
                  },
                  Object {
                    "color": "#FFF",
                  },
                ]
              }
            >
              Loading...
            </Text>
          </View>
        </View>
      </View>
    </Modal>
  </View>
</RCTScrollView>
`;

exports[`MovieDetail should show the movie when the movie is loaded 1`] = `
<RCTScrollView
  collapsable={false}
  handlerTag={2}
  handlerType="NativeViewGestureHandler"
  onGestureHandlerEvent={[Function]}
  onGestureHandlerStateChange={[Function]}
  waitFor={
    Array [
      Object {
        "current": null,
      },
    ]
  }
>
  <View>
    <Modal
      animationType="none"
      hardwareAccelerated={false}
      onRequestClose={[Function]}
      statusBarTranslucent={true}
      supportedOrientations={
        Array [
          "landscape",
          "portrait",
        ]
      }
      transparent={true}
      visible={false}
    />
    <View>
      <Text
        style={
          Object {
            "fontSize": 35,
            "marginVertical": 10,
            "textAlign": "center",
          }
        }
      >
        Strange World
      </Text>
      <View
        accessibilityIgnoresInvertColors={true}
        style={
          Object {
            "backgroundColor": "black",
            "height": 400,
            "width": 750,
          }
        }
      >
        <Image
          accessibilityIgnoresInvertColors={true}
          resizeMode="contain"
          source={
            Object {
              "uri": "undefinedoriginal/a9x70QUXs6uEwtin1SGNKoFXoia.jpg",
            }
          }
          style={
            Array [
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              Object {
                "height": 400,
                "width": 750,
              },
              undefined,
            ]
          }
        />
        <BVLinearGradient
          colors={
            Array [
              undefined,
              4294111986,
            ]
          }
          endPoint={
            Object {
              "x": 0,
              "y": 1,
            }
          }
          locations={null}
          startPoint={
            Object {
              "x": 0,
              "y": 0.4,
            }
          }
          style={
            Object {
              "height": "100%",
              "width": "100%",
            }
          }
        />
      </View>
      <View
        style={
          Object {
            "alignSelf": "center",
            "flexDirection": "row",
            "marginVertical": 10,
            "textAlign": "center",
          }
        }
      >
        <Text
          style={
            Object {
              "fontSize": 15,
              "marginHorizontal": 10,
              "textAlign": "center",
            }
          }
        >
          ⦿ Animation
        </Text>
        <Text
          style={
            Object {
              "fontSize": 15,
              "marginHorizontal": 10,
              "textAlign": "center",
            }
          }
        >
          ⦿ Science Fiction
        </Text>
        <Text
          style={
            Object {
              "fontSize": 15,
              "marginHorizontal": 10,
              "textAlign": "center",
            }
          }
        >
          ⦿ Adventure
        </Text>
        <Text
          style={
            Object {
              "fontSize": 15,
              "marginHorizontal": 10,
              "textAlign": "center",
            }
          }
        >
          ⦿ Family
        </Text>
      </View>
      <Text
        style={
          Object {
            "fontSize": 18,
            "marginVertical": 10,
            "textAlign": "center",
          }
        }
      >
        A journey deep into an uncharted and treacherous land, where fantastical creatures await the legendary Clades—a family of explorers whose differences threaten to topple their latest, and by far most crucial, mission.
      </Text>
    </View>
  </View>
</RCTScrollView>
`;
